--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,19 @@
 layout: default
 ---
 
+
 <article>
   {% include meta.html post=page %}
+  <!-- Look the author details up from the site config. -->
+  {% assign author = site.data.authors[page.author] %}
+
+  <!-- Output author details if some exist. -->
+  {% if author %}
+      <span>
+          <!-- Personal Info. -->
+          Written by <a href="{{ author.web }}">{{ author.name }}</a>
+      </span>
+  {% endif %}
   {{ content }}
   {% if page.comments != false and site.comments.isso or site.comments.disqus %}
     <hr>
