--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,5 +4,12 @@
   {% endif %}
   <h1><a href="{{ include.post.url | relative_url }}">{{ include.post.title }}</a></h1>
   {%- assign date_format = site.date_format | default: "%B %d, %Y" -%}
-  <time datetime="{{ include.post.date | date_to_xmlschema }}">{{ include.post.date | date: date_format }}</time>
+  <time datetime="{{ include.post.date | date_to_xmlschema }}">{{ include.post.date | date: date_format }}</time><br>
+
+  {% assign author = site.authors | where: 'short_name', page.author | first %}
+  {% if author %}
+    by <a href="{{ author.url }}">{{ author.name }}</a>
+  {% endif %}
+
+
 </header>
