--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -86,7 +86,7 @@ tr:hover, tr:nth-child(odd) td
 pre
   background: reduce(12)
   border-radius: 2px
-  font-size: .8em
+  font-size: 2.8em
   margin: 1.5em 0
   padding: .8em 1.2em
   overflow-x: auto
