--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -8,11 +8,11 @@ article header
   margin-bottom: 1.5em
 
 article header h1
-  font-size: 1.8em
+  font-size: 1.7em
   margin: 0 0 .1em
 
 nav
   margin: .5em -.8em
 
 nav a
-  margin: .5em .8em
+  margin: 1.5em 1.8em
