--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,12 +6,10 @@
   {%- assign date_format = site.date_format | default: "%B %d, %Y" -%}
   <time datetime="{{ include.post.date | date_to_xmlschema }}">{{ include.post.date | date: date_format }}</time><br>
 
-<a href="{{ include.author.url}}"> by {{ include.post.author }}</a>
-
-<!--CR note: original approach to authors..prob never mind
   {% assign author = site.authors | where: 'short_name', page.author | first %}
   {% if author %}
     by <a href="{{ author.url }}">{{ author.name }}</a>
-  {% endif %} -->
+  {% endif %}
+
 
 </header>
