--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,12 +6,8 @@
   {%- assign date_format = site.date_format | default: "%B %d, %Y" -%}
   <time datetime="{{ include.post.date | date_to_xmlschema }}">{{ include.post.date | date: date_format }}</time><br>
 
-  <!-- {% assign author = site.authors | where: 'short_name', page.author | first %}
-  {% if author %} -->
-  <!-- {% assign author = site.authors | where: 'short_name', page.author | first %} -->
+  {% assign author = site.authors | where: 'author', page.author | first %}
   {% if author %}
-    by <a href="{{ author.url }}">{{ author.name }}</a>
+    by <a href="{{ author.url }}">{{ author.author }}</a>
   {% endif %}
-
-
 </header>
