--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -6,7 +6,7 @@ layout: page
 
 <h2>Posts</h2>
 <ul>
-  {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+  {% assign filtered_posts = site.posts | where: 'author', page.author %}
   {% for post in filtered_posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
